Position of Script tag is changed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="file.js" defer></script>
     <title>FOOD - Our need</title>
 </head>
 
@@ -167,8 +168,6 @@
             <h4 class="text2">-Ankit Aggarwal</h4>
         </div>
     </section>
-
-    <script src="file.js"></script>
 </body>
 
 </html>
